Initial added code of site

--- a/origins.html
+++ b/origins.html
@@ -127,7 +127,7 @@
     .origin-summary {
       font-size: 0.95rem;
       margin-bottom: 1rem;
-      color: #6e6e6e;
+      color: #b47eff;
     }
     .stats-section {
       font-size: 0.85rem;
@@ -135,7 +135,7 @@
       line-height: 1.25;
       max-height: 7.5rem;
       overflow-y: auto;
-      color: #535353;
+      color: #b47eff;
       background: rgba(0,0,0,0.15);
       border-radius: 6px;
       padding: 0.6rem;
