Initial added code of site

--- a/origins.html
+++ b/origins.html
@@ -158,7 +158,16 @@
       <a href="contact.html">Join</a>
     </nav>
   </header>
-
+  <header>
+    <div class="toolbar">
+      <div class="search" role="search">
+        <span aria-hidden="true">🔎</span>
+        <input id="search" placeholder="Search origins, abilities, or stats…" autocomplete="off" />
+      </div>
+      <span class="count" id="count"></span>
+    </div>
+  </header>
+  
 <main class="container">
   <section class="grid" id="grid">
 
