Edited the code as Im still lazy :(

--- a/origins.html
+++ b/origins.html
@@ -211,10 +211,11 @@
     </nav>
   </header>
   <header>
-    <!-- ✦ SEARCH BAR -->
-    <div class="search-bar">
-      <input type="text" id="originSearch" placeholder="🔍 Search origins by name, ability, or keyword..." />
+    <div class="search-container">
+      <input id="search" type="text" placeholder="Search origins, abilities, stats..." />
+      <span class="search-icon">🔍</span>
     </div>
+    <div id="count" class="count-display"></div>
     <!-- ✦ TIPS TICKER -->
     <div class="tips-ticker" aria-label="Gameplay Tips">
       <div class="ticker-track">
