Edited the code as Im still lazy :(

--- a/origins.html
+++ b/origins.html
@@ -188,8 +188,8 @@
       <a href="rules.html">Rules</a>
       <a href="contact.html">Join</a>
     </nav>
-  </header>
-  <header>
+
+    <!-- ✦ SEARCH BAR -->
     <div class="toolbar">
       <div class="search" role="search">
         <span aria-hidden="true">🔎</span>
@@ -197,6 +197,7 @@
       </div>
       <span class="count" id="count"></span>
     </div>
+
     <!-- ✦ TIPS TICKER -->
     <div class="tips-ticker" aria-label="Gameplay Tips">
       <div class="ticker-track">
