--- a/origins.html
+++ b/origins.html
@@ -145,6 +145,18 @@
   /* Footer tiny */
   footer{color:var(--muted); font-size:.85rem; border-top:1px solid var(--border); padding:1rem}
   
+  /* Make sure dropdowns are on top of everything */
+  .nav-links .dropdown-content {
+    position: absolute;   /* keeps it positioned relative to parent */
+    z-index: 9999;        /* ensures it's above all other content */
+    background-color: #fff; /* optional: keep it visible */
+    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+  }
+
+  /* Optional: ensure the parent has relative positioning */
+  .nav-links .dropdown {
+    position: relative;
+  }
 </style>
 </head>
 
