--- a/origins.html
+++ b/origins.html
@@ -35,6 +35,79 @@
   h1{font-size:1.6rem; margin:0 0 .5rem}
   .sub{color:var(--muted); margin:.25rem 0 1rem}
 
+  .site-header {
+    position: sticky;
+    top: 0;
+    z-index: 5;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0.5rem 1.5rem;
+    background: linear-gradient(180deg, rgba(12,20,28,.98), rgba(12,20,28,.86));
+    backdrop-filter: blur(8px);
+    border-bottom: 1px solid var(--border);
+  }
+
+  .logo-container {
+    flex: 0 0 auto;
+  }
+
+  .site-logo {
+    height: 40px;
+    width: auto;
+  }
+
+  .site-title {
+    flex: 1;
+    text-align: center;
+    margin: 0;
+    font-size: 1.25rem;
+    font-weight: 700;
+  }
+
+  .nav-links {
+    flex: 0 0 auto;
+    display: flex;
+    gap: 1.5rem;
+  }
+
+  .nav-links a {
+    color: var(--text);
+    text-decoration: none;
+    font-weight: 600;
+    transition: color 0.2s ease;
+  }
+
+  .nav-links a:hover,
+  .nav-links a.active {
+    color: orange;
+  }
+  /* Dropdown content */
+  .nav-links .dropdown-content {
+    display: none;
+    position: absolute;
+    top: 100%; /* positions directly below parent link */
+    left: 0;
+    min-width: 180px;
+    background: var(--panel); /* dark panel style */
+    border: 1px solid var(--border);
+    border-radius: 0.5rem;
+    box-shadow: 0 8px 16px rgba(0,0,0,.6);
+    z-index: 9999; /* keeps on top of ticker, search, etc */
+  }
+
+  /* Dropdown links */
+  .nav-links .dropdown-content a {
+    color: var(--text);
+    padding: 0.6rem 1rem;
+    display: block;
+    font-size: 0.9rem;
+    text-decoration: none;
+    transition: background 0.2s ease;
+  }
+  .nav-links .dropdown-content a:hover {
+    background: var(--chip);
+  }
   /* Search */
   .toolbar{display:grid; grid-template-columns:1fr auto; gap:.75rem; align-items:center}
   .search{
@@ -145,43 +218,7 @@
   /* Footer tiny */
   footer{color:var(--muted); font-size:.85rem; border-top:1px solid var(--border); padding:1rem}
   
-  /* Dropdown container */
-  .nav-links .dropdown {
-    position: relative;
-    display: inline-block;
-  }
 
-  /* Dropdown content */
-  .nav-links .dropdown-content {
-    display: none;
-    position: absolute;
-    top: 100%; /* positions directly below parent link */
-    left: 0;
-    min-width: 180px;
-    background: var(--panel); /* dark panel style */
-    border: 1px solid var(--border);
-    border-radius: 0.5rem;
-    box-shadow: 0 8px 16px rgba(0,0,0,.6);
-    z-index: 9999; /* keeps on top of ticker, search, etc */
-  }
-
-  /* Dropdown links */
-  .nav-links .dropdown-content a {
-    color: var(--text);
-    padding: 0.6rem 1rem;
-    display: block;
-    font-size: 0.9rem;
-    text-decoration: none;
-    transition: background 0.2s ease;
-  }
-  .nav-links .dropdown-content a:hover {
-    background: var(--chip);
-  }
-
-  /* Show on hover */
-  .nav-links .dropdown:hover .dropdown-content {
-    display: block;
-  }
 
 </style>
 </head>
