Edited the code as Im still lazy :(

--- a/origins.html
+++ b/origins.html
@@ -263,7 +263,8 @@
       <a href="rules.html">Rules</a>
       <a href="contact.html">Join</a>
     </nav>
-
+  </header>
+  <header>
     <!-- ✦ SEARCH BAR -->
     <div class="toolbar">
       <div class="search" role="search">
