--- a/origins.html
+++ b/origins.html
@@ -244,27 +244,28 @@
 
   <!-- ✦ PAGE CONTENT BELOW -->
   <header class="site-header">
-    <div class="logo-container">
-      <a href="index.html" aria-label="Home">
-        <img src="assets/logo.png" alt="Origins Rebirth Logo" class="site-logo" />
-      </a>
-    </div>
-    <h1 class="site-title">Origins Rebirth</h1>
-    <nav class="nav-links" aria-label="Main Navigation">
-      <a href="index.html">Home</a>
-      <div class="dropdown">
-        <a href="about.html">About ▾</a>
-        <div class="dropdown-content">
-          <a href="wiki.html">Wiki</a>
-          <a href="origins.html" class="dropbtn active">Origins</a>
-          <a href="map.html">Map</a>
-        </div>
+    <div class="nav-bar"></div>
+      <div class="logo-container"></div>
+        <a href="index.html">
+          <img src="assets/logo.png" class="site-logo" alt="Origins Rebirth Logo">
+        </a>
       </div>
-      <a href="rules.html">Rules</a>
-      <a href="contact.html">Join</a>
-    </nav>
-  </header>
-  <header>
+      <h1 class="site-title">Origins Rebirth</h1>
+      <nav class="nav-links"></nav>
+        <a href="index.html" class="active">Home</a>
+        <div class="dropdown"></div>
+          <a href="about.html">About ▾</a>
+          <div class="dropdown-content">
+            <a href="wiki.html">Wiki</a>
+            <a href="origins.html">Origins</a>
+            <a href="map.html">Map</a>
+          </div>
+        </div>
+        <a href="rules.html">Rules</a>
+        <a href="contact.html">Join</a>
+      </nav>
+    </div>
+
     <!-- ✦ SEARCH BAR -->
     <div class="toolbar">
       <div class="search" role="search">
