--- a/origins.html
+++ b/origins.html
@@ -9,6 +9,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 <style>
   :root{
+  /* =============================
+    RESET & GLOBAL STYLES
+  ============================= */
     --bg: #0b0f14;
     --panel: #10161d;
     --panel-2:#0d1319;
@@ -35,119 +38,194 @@
   h1{font-size:1.6rem; margin:0 0 .5rem}
   .sub{color:var(--muted); margin:.25rem 0 1rem}
 
-  .site-header {
-    position: sticky;
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
+  body {
+    font-family: "Segoe UI", Arial, sans-serif;
+    color: #fff;
+    background: #0d0d0d;
+    overflow-x: hidden;
+  }
+
+  /* =============================
+    BACKGROUND SLIDES
+  ============================= */
+  .background-carousel {
+    position: fixed;
     top: 0;
-    z-index: 5;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -2;
+    overflow: hidden;
+  }
+
+  .background-carousel .slide {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
+  }
+
+  .background-carousel .slide.active {
+    opacity: 1;
+  }
+
+  .background-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.7);
+    z-index: -1;
+  }
+
+  /* =============================
+    HEADER & NAVBAR
+  ============================= */
+  .site-header {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    background: rgba(0,0,0,0.85);
     padding: 0.5rem 1.5rem;
-    background: linear-gradient(180deg, rgba(12,20,28,.98), rgba(12,20,28,.86));
-    backdrop-filter: blur(8px);
-    border-bottom: 1px solid var(--border);
+    position: sticky;
+    top: 0;
+    z-index: 1000;
   }
 
-  .logo-container {
-    flex: 0 0 auto;
-  }
-
-  .site-logo {
-    height: 40px;
-    width: auto;
+  /* Logo + Title */
+  .logo-container img {
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+    box-shadow: 0 0 12px rgba(0, 200, 255, 0.8);
   }
 
   .site-title {
-    flex: 1;
-    text-align: center;
-    margin: 0;
-    font-size: 1.25rem;
+    font-size: 1.4rem;
     font-weight: 700;
+    margin-left: 0.5rem;
+    color: #fff;
+    display: inline-block;
   }
 
+  /* Nav links */
   .nav-links {
-    flex: 0 0 auto;
     display: flex;
+    align-items: center;
     gap: 1.5rem;
   }
 
   .nav-links a {
-    color: var(--text);
+    color: #fff;
     text-decoration: none;
     font-weight: 600;
-    transition: color 0.2s ease;
+    transition: color 0.2s;
   }
 
   .nav-links a:hover,
   .nav-links a.active {
-    color: orange;
+    color: #ffb400; /* golden highlight */
   }
-  /* Dropdown content */
-  .nav-links .dropdown-content {
-    display: none;
+
+  /* Dropdown */
+  .dropdown {
+    position: relative;
+  }
+
+  .dropdown a {
+    cursor: pointer;
+  }
+
+  .dropdown-content {
     position: absolute;
-    top: 100%; /* positions directly below parent link */
+    top: 100%;
     left: 0;
-    min-width: 180px;
-    background: var(--panel); /* dark panel style */
-    border: 1px solid var(--border);
-    border-radius: 0.5rem;
-    box-shadow: 0 8px 16px rgba(0,0,0,.6);
-    z-index: 9999; /* keeps on top of ticker, search, etc */
+    background: rgba(20, 20, 20, 0.95);
+    border: 1px solid rgba(255,255,255,0.1);
+    display: none;
+    flex-direction: column;
+    min-width: 160px;
+    padding: 0.5rem 0;
+    border-radius: 6px;
   }
 
-  /* Dropdown links */
-  .nav-links .dropdown-content a {
-    color: var(--text);
-    padding: 0.6rem 1rem;
-    display: block;
-    font-size: 0.9rem;
-    text-decoration: none;
-    transition: background 0.2s ease;
-  }
-  .nav-links .dropdown-content a:hover {
-    background: var(--chip);
-  }
-  /* Search */
-  .toolbar{display:grid; grid-template-columns:1fr auto; gap:.75rem; align-items:center}
-  .search{
-    display:flex; gap:.5rem; align-items:center; padding:.65rem .8rem; border:1px solid var(--border);
-    background:var(--panel); border-radius:.75rem;
-  }
-  .search input{
-    flex:1; background:transparent; border:0; color:var(--text); outline:none; font-size:.95rem;
-  }
-  .pill{padding:.45rem .6rem; background:var(--chip); color:var(--chip-text); border:1px solid var(--border); border-radius:999px; font-size:.8rem}
-  .count{opacity:.8; font-size:.9rem}
-
-  /* ✦ Tips News Ticker */
-  .tips-ticker {
-    width: 100%;
-    overflow: hidden;
-    background: rgba(0, 0, 0, 0.65); /* translucent black */
-    border-top: 2px solid rgba(255, 255, 255, 0.1);
-    border-bottom: 2px solid rgba(255, 255, 255, 0.1);
-    color: #fff;
-    font-size: 0.95rem;
+  .dropdown-content a {
+    padding: 0.5rem 1rem;
     white-space: nowrap;
-    box-shadow: 0 -2px 6px rgba(0,0,0,0.4);
+  }
+
+  .dropdown-content a:hover {
+    background: rgba(255,255,255,0.05);
+  }
+
+  .dropdown:hover .dropdown-content {
+    display: flex;
+  }
+
+  /* =============================
+    SEARCH BAR
+  ============================= */
+  .toolbar {
+    display: flex;
+    align-items: center;
+    gap: 0.75rem;
+  }
+
+  .search {
+    display: flex;
+    align-items: center;
+    gap: 0.4rem;
+    background: rgba(255,255,255,0.07);
+    padding: 0.4rem 0.8rem;
+    border-radius: 8px;
+  }
+
+  .search input {
+    background: transparent;
+    border: none;
+    outline: none;
+    color: #fff;
+    font-size: 0.9rem;
+  }
+
+  .search span {
+    font-size: 1rem;
+  }
+
+  /* =============================
+    TIPS TICKER
+  ============================= */
+  .tips-ticker {
+    background: rgba(0,0,0,0.7);
+    overflow: hidden;
+    white-space: nowrap;
+    width: 100%;
+    padding: 0.5rem 1rem;
+    font-size: 0.9rem;
+    color: #ccc;
   }
 
   .ticker-track {
     display: inline-block;
-    padding-left: 100%;
-    animation: ticker 90s linear infinite; /* adjust speed */
+    animation: ticker 40s linear infinite;
   }
 
-  .ticker-track span {
-    display: inline-block;
-    padding: 0.75rem 6rem;
-    font-weight: 500;
-    color: #e6e6e6;
+  .tips-ticker span {
+    margin-right: 2rem;
   }
 
   @keyframes ticker {
-    0%   { transform: translateX(0); }
+    0% { transform: translateX(100%); }
     100% { transform: translateX(-100%); }
   }
   /* Grid */
@@ -244,48 +322,53 @@
 
   <!-- ✦ PAGE CONTENT BELOW -->
   <header class="site-header">
-    <div class="nav-bar"></div>
-      <div class="logo-container"></div>
-        <a href="index.html">
-          <img src="assets/logo.png" class="site-logo" alt="Origins Rebirth Logo">
-        </a>
-      </div>
-      <h1 class="site-title">Origins Rebirth</h1>
-      <nav class="nav-links"></nav>
-        <a href="index.html" class="active">Home</a>
-        <div class="dropdown"></div>
-          <a href="about.html">About ▾</a>
-          <div class="dropdown-content">
-            <a href="wiki.html">Wiki</a>
-            <a href="origins.html">Origins</a>
-            <a href="map.html">Map</a>
-          </div>
+    <!-- Logo -->
+    <div class="logo-container">
+      <a href="index.html">
+        <img src="assets/logo.png" class="site-logo" alt="Origins Rebirth Logo">
+      </a>
+    </div>
+
+    <!-- Title -->
+    <h1 class="site-title">Origins Rebirth</h1>
+
+    <!-- Navigation -->
+    <nav class="nav-links">
+      <a href="index.html" class="active">Home</a>
+
+      <div class="dropdown">
+        <a href="about.html">About ▾</a>
+        <div class="dropdown-content">
+          <a href="wiki.html">Wiki</a>
+          <a href="origins.html">Origins</a>
+          <a href="map.html">Map</a>
         </div>
-        <a href="rules.html">Rules</a>
-        <a href="contact.html">Join</a>
-      </nav>
-    </div>
-
-    <!-- ✦ SEARCH BAR -->
-    <div class="toolbar">
-      <div class="search" role="search">
-        <span aria-hidden="true">🔎</span>
-        <input id="search" placeholder="Search origins, abilities, or stats…" autocomplete="off" />
       </div>
-      <span class="count" id="count"></span>
-    </div>
 
-    <!-- ✦ TIPS TICKER -->
-    <div class="tips-ticker" aria-label="Gameplay Tips">
-      <div class="ticker-track">
-        <span>💡 Tip: Use the search box to filter by name, abilities (“teleport”, “pollinate”), or keywords (“melee 120%”, “trident”, “climb”).</span>
-        <span>💡 Tip: If on Bedrock, use abilities by emotes.</span>
-        <span>💡 Tip: Use /human then /origin or "F" if on Java.</span>
-        <span>💡 Tip: Crouching + "F" is 2nd ability and "F" is 1st ability on Java.</span>
-        <span>💡 Tip: Shulk is recommended for beginners due to its tough shell and infinite Ender Chest power.</span>
-      </div>
-    </div>
+      <a href="rules.html">Rules</a>
+      <a href="contact.html">Join</a>
+    </nav>
   </header>
+
+  <!-- ✦ SEARCH BAR -->
+  <div class="toolbar">
+    <div class="search" role="search">
+      <span aria-hidden="true">🔎</span>
+      <input id="search" placeholder="Search origins, abilities, or stats…" autocomplete="off" />
+    </div>
+    <span class="count" id="count"></span>
+  </div>
+
+  <!-- ✦ TIPS TICKER -->
+  <div class="tips-ticker" aria-label="Gameplay Tips">
+    <div class="ticker-track">
+      <span>💡 Tip: Use the search box to filter by name, abilities (“teleport”, “pollinate”), or keywords (“melee 120%”, “trident”, “climb”).</span>
+      <span>💡 Tip: If on Bedrock, use abilities by emotes.</span>
+      <span>💡 Tip: Use /human then /origin or "F" if on Java.</span>
+      <span>💡 Tip: Crouching + "F" is 2nd ability and "F" is 1st ability on Java.</span>
+      <span>💡 Tip: Shulk is recommended for beginners due to its tough shell and infinite Ender Chest power.</span>
+    </div>
+  </div>
   
 <main class="container">
   <section class="grid" id="grid">
