Edited the code as Im still lazy :(

--- a/origins.html
+++ b/origins.html
@@ -173,34 +173,59 @@
   }
 
   /* =============================
-    SEARCH BAR
+    FUTURISTIC SEARCH BAR
   ============================= */
   .toolbar {
     display: flex;
     align-items: center;
     gap: 0.75rem;
+    margin: 1rem 1.5rem;
   }
 
   .search {
     display: flex;
     align-items: center;
-    gap: 0.4rem;
-    background: rgba(255,255,255,0.07);
-    padding: 0.4rem 0.8rem;
-    border-radius: 8px;
+    gap: 0.6rem;
+    padding: 0.5rem 1rem;
+    border-radius: 12px;
+    background: rgba(0, 0, 0, 0.3);
+    border: 2px solid rgba(93, 214, 255, 0.4);
+    box-shadow: 0 0 15px rgba(93, 214, 255, 0.3), inset 0 0 5px rgba(93, 214, 255, 0.2);
+    transition: all 0.3s ease;
+    backdrop-filter: blur(8px);
+  }
+
+  .search:hover {
+    border-color: #5dd6ff;
+    box-shadow: 0 0 20px #5dd6ff, inset 0 0 8px #5dd6ff;
   }
 
   .search input {
     background: transparent;
     border: none;
     outline: none;
-    color: #fff;
-    font-size: 0.9rem;
+    color: #e8f0f7;
+    font-size: 1rem;
+    width: 250px;
+    padding: 0.4rem 0;
+    caret-color: #5dd6ff;
+    transition: all 0.2s ease;
+  }
+
+  .search input::placeholder {
+    color: rgba(232, 240, 247, 0.6);
   }
 
   .search span {
-    font-size: 1rem;
+    font-size: 1.2rem;
+    color: #5dd6ff;
+    transition: transform 0.3s ease;
   }
+
+  .search:hover span {
+    transform: scale(1.2);
+  }
+
 
   /* =============================
     TIPS TICKER
