Edited the code as Im still lazy :(

--- a/origins.html
+++ b/origins.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About - Origins Rebirth</title>
+  <title>Origins Rebirth - Origins</title>
   <link rel="stylesheet" href="css/style.css" />
   <link rel="icon" href="assets/logo.png" type="image/png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
@@ -359,13 +359,13 @@
 
     <!-- Navigation -->
     <nav class="nav-links">
-      <a href="index.html" class="active">Home</a>
+      <a href="index.html">Home</a>
 
       <div class="dropdown">
         <a href="about.html">About ▾</a>
         <div class="dropdown-content">
           <a href="wiki.html">Wiki</a>
-          <a href="origins.html">Origins</a>
+          <a href="origins.html" class="active">Origins</a>
           <a href="map.html">Map</a>
         </div>
       </div>
