Edited the code as Im still lazy :(

--- a/origins.html
+++ b/origins.html
@@ -465,7 +465,7 @@
       </div>
       <p class="flavor">8 legs, 8 eyes, 8x the fun — <b>WIP</b> (partly implemented).</p>
 
-      <details open>
+      <details>
         <summary>General Stats</summary>
         <div class="content">
           <div><b>Mobility:</b> Speed: 95% (Sneaking: 70%) • Jump Height: 125% (Gravity: 95%)</div>
