--- a/origins.html
+++ b/origins.html
@@ -206,7 +206,8 @@
     outline: none;
     color: #e8f0f7;
     font-size: 1rem;
-    width: 450px;
+    width: 50%; /* 50% of the toolbar/container */
+    max-width: 800px; /* optional max width */
     padding: 0.4rem 0;
     caret-color: #5dd6ff;
     transition: all 0.2s ease;
